--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@
 VUE_APP_BASE_API = '//531431988.github.io/animation/dist/'
 
 // 部署应用包时的基本 URL
-VUE_APP_PUBLIC_PATH = 'animation/dist'
+VUE_APP_PUBLIC_PATH = '/'
