--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:preview": "vue-cli-service build --mode preview",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^1.3.16",
+    "ant-design-vue": "^1.4.12",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-ls": "^3.2.1",
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.6.0",
