--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "serve:test": "vue-cli-service serve --mode test",
+    "build:test": "vue-cli-service build --mode test",
     "build": "vue-cli-service build",
-    "build:preview": "vue-cli-service build --mode preview",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
