--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 // 生产环境配置
 
 // api接口
-VUE_APP_BASE_API = '//production:8080/'
+VUE_APP_BASE_API = '//112.74.63.103:8098'
 
 // 部署应用包时的基本 URL
 VUE_APP_PUBLIC_PATH = '/'
