--- a/.env.test
+++ b/.env.test
@@ -3,7 +3,7 @@
 NODE_ENV = production
 
 // api接口
-VUE_APP_BASE_API = '//test:8080/'
+VUE_APP_BASE_API = '//112.74.63.103:8098'
 
 // 部署应用包时的基本 URL
 VUE_APP_PUBLIC_PATH = '/'
