--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.10",
     "vue-ls": "^3.2.1",
     "vue-router": "^3.0.3",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
@@ -40,6 +41,7 @@
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "style-resources-loader": "^1.2.1",
+    "videojs-flash": "2.1.0",
     "vue-cli-plugin-ant-design": "^1.0.0",
     "vue-cli-plugin-iview": "^1.0.6",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
