--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 // 开发环境配置
 
 // api接口
-VUE_APP_BASE_API = '//112.74.63.103:8098'
+VUE_APP_BASE_API = '//192.168.7.28:8088/cotton-planting'
 
 // 部署应用包时的基本 URL
 VUE_APP_PUBLIC_PATH = '/'
