--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,6 @@
 // 生产环境配置
-
 // api接口
-VUE_APP_BASE_API = '//112.74.63.103:8098'
+VUE_APP_BASE_API = 'https://nyjyztpt.cloudmas.cn/cotton-planting'
 
 // 部署应用包时的基本 URL
-VUE_APP_PUBLIC_PATH = '/'
+VUE_APP_PUBLIC_PATH = '/cotton'
