--- a/.env.test
+++ b/.env.test
@@ -1,9 +1,8 @@
 // 测试环境配置
-
 NODE_ENV = production
 
 // api接口
-VUE_APP_BASE_API = '//112.74.63.103:8098'
+VUE_APP_BASE_API = '//192.168.7.28:8088/cotton-planting'
 
 // 部署应用包时的基本 URL
-VUE_APP_PUBLIC_PATH = '/'
+VUE_APP_PUBLIC_PATH = '/cotton'
