--- a/package.json
+++ b/package.json
@@ -1,53 +1,52 @@
 {
-  "name": "vue-component-library",
+  "name": "vue3.0",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "serve:test": "vue-cli-service serve --mode test",
-    "build:test": "vue-cli-service build --mode test",
     "build": "vue-cli-service build",
+    "build:test": "vue-cli-service build --mode test",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "^1.4.12",
-    "axios": "^0.18.0",
-    "core-js": "^2.6.5",
-    "js-cookie": "^2.2.1",
-    "nprogress": "^0.2.0",
-    "vue": "^2.6.10",
-    "vue-ls": "^3.2.1",
-    "vue-router": "^3.0.3",
-    "vue-video-player": "^5.0.2",
-    "vuex": "^3.1.3"
+    "ant-design-vue": "^2.0.0-rc.7",
+    "core-js": "^3.6.5",
+    "vue": "^3.0.0-0",
+    "vue-router": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.6.0",
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-import": "^1.11.0",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0-0",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "compression-webpack-plugin": "^3.0.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "fs-extra": "^8.0.1",
-    "image-webpack-loader": "^6.0.0",
-    "less": "^3.9.0",
+    "compression-webpack-plugin": "^6.0.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0-0",
+    "filemanager-webpack-plugin": "^2.0.5",
+    "less": "^3.12.2",
     "less-loader": "^5.0.0",
-    "mockjs": "^1.0.1-beta3",
-    "sass": "^1.18.0",
-    "sass-loader": "^7.1.0",
-    "style-resources-loader": "^1.2.1",
-    "videojs-flash": "2.1.0",
-    "vue-cli-plugin-ant-design": "^1.0.0",
-    "vue-cli-plugin-iview": "^1.0.6",
-    "vue-cli-plugin-style-resources-loader": "^0.1.3",
-    "vue-cli-plugin-webpack-bundle-analyzer": "^1.3.0",
-    "vue-svg-loader": "^0.12.0",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-bundle-analyzer": "^3.5.0"
-  }
+    "prettier": "^2.1.2",
+    "style-resources-loader": "^1.3.3"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/strongly-recommended",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
